--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_auth: ^0.18.3
   cloud_firestore: ^0.14.3
   firebase_messaging: ^7.0.3
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
