--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,4 +67,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-messaging:21.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
 }
